# CourseWork4

./: .env_sample  pyproject.toml
config/: settings.py  urls.py
distribution/: admin.py  celery.py  forms.py  models.py  urls.py  views.py
distribution/migrations/: 0001_initial.py  0002_distribution_owner_mailingrecipient_owner_and_more.py  0003_alter_distribution_options_alter_distribution_status.py  0004_alter_attempttosend_options_and_more.py
distribution/templates/: base.html  confirm_delete.html  contacts.html  distribution_form.html  distribution_list.html  message_form.html  message_list.html  recipient_form.html  recipient_list.html  reports.html  users_list.html
distribution/templates/includes/: inc_supp.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: base_user.html  change_password.html  login.html  profile.html  register.html
