[tool.poetry]
name = "coursework4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.4"
python-dotenv = "^1.1.1"
psycopg2 = "^2.9.10"
include = "^0.2.2"
pillow = "^11.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
